[tool.poetry]
name = "textual-textarea"
version = "0.11.0"
description = "A text area (multi-line input) with syntax highlighting for Textual"
authors = ["Ted Conbeer <tconbeer@users.noreply.github.com>"]
license = "MIT"
homepage = "https://github.com/tconbeer/textual-textarea"
repository = "https://github.com/tconbeer/textual-textarea"
readme = "README.md"
packages = [{ include = "textual_textarea", from = "src" }]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
textual = { version = ">=0.48.1, <1.0.0", extras = ["syntax"] }
pyperclip = "^1.8.2"
tree-sitter-languages = "<1.10.0" # 1.10 unavail on windows, macos on 1/30/24

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.1"
textual = "0.48.1"
textual-dev = "^1.2.1"
pyinstrument = "^4.6.2"

[tool.poetry.group.static.dependencies]
black = "^24.1.1"
ruff = "^0.2.0"
mypy = "^1.8.0"
types-pygments = "^2.16.0.0"

[tool.poetry.group.test.dependencies]
pytest = ">=7.3.1,<9.0.0"
pytest-asyncio = "^0.21.0"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
files = [
    "src/textual_textarea/**/*.py",
    "tests/**/*.py",
]
mypy_path = "src:stubs"

show_column_numbers = true

# show error messages from unrelated files
follow_imports = "normal"

# be strict
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
strict_optional = true

warn_return_any = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true

no_implicit_reexport = true
strict_equality = true